fixed alignment

--- a/css/groups.css
+++ b/css/groups.css
@@ -90,7 +90,7 @@ div.person{
 
 #groups input{
     width: 80%;
-    margin: 2px 10px;
+    margin: 7px 10px;
     height: 30px;
     border: 1px var(--gray);
 }
